Ignore a few more files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# LaTeX
+*.aux
+*.bbl
+*.blg
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.synctex.gz
+*.bcf
+*.run.xml
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
