--- a/QuantEst/.gitignore
+++ b/QuantEst/.gitignore
@@ -1,7 +1,9 @@
 /.idea
-/report/*.aux
-/report/*.aux
-/report/*.fdb_latexmk
-/report/*.fls
-/report/*.log
-/report/*.synctex.gz
+*.aux
+*.aux
+*.fdb_latexmk
+*.fls
+*.log
+*.synctex.gz
+*.pdf
+*.zip
