--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Generate_files
 /QuantEst/sgd_est_experiment/trail
+/QuantEst/sgd_est_experiment/Experiment_results
+/writing
+.DS_Store
 
 # LaTeX
 *.aux
