.gitignore updated, SImultaneous_SGD updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
 # Generate_files
+/BregmanLR/
+/Ideas/
+/QuantUCB/
+/SynBio/
+/Thompson_sampling/
+/acton_experiment/
+/matrix_factorization/
+/LICENSE
+/README.md
+/notes.md
 /QuantEst/sgd_est_experiment/trail
 /QuantEst/sgd_est_experiment/Experiment_results
 /writing
